@@ -14,9 +14,9 @@ FileKeyEntry::FileKeyEntry(const FXFont& font, const std::string& ext, const vec
 
     shadow      = vec2(3.0, 3.0);
 
-    width       = 90.0f;
-    height      = 18.0f;
-    left_margin = 20.0f;
+    width       = 90.0f * gGourceSettings.font_scale;
+    height      = gGourceSettings.font_size + 4.0f;
+    left_margin = gGourceSettings.font_size + 4.0f;
     count       = 0;
     brightness  = 1.0f;
     alpha       = 0.0f;
@@ -31,7 +31,7 @@ FileKeyEntry::FileKeyEntry(const FXFont& font, const std::string& ext, const vec
 
     bool truncated = false;
 
-    while(font.getWidth(display_ext) > width - 15.0f) {
+    while(font.getWidth(display_ext) > width - 15.0f * gGourceSettings.font_scale) {
         display_ext.resize(display_ext.size()-1);
         truncated = true;
     }
@@ -163,7 +163,7 @@ FileKey::FileKey() {
 FileKey::FileKey(float update_interval) {
     this->update_interval = update_interval;
     interval_remaining = 1.0f;
-    font = fontmanager.grab(gGourceSettings.font_file, 16);
+    font = fontmanager.grab(gGourceSettings.font_file, gGourceSettings.font_size);
     font.dropShadow(false);
     font.roundCoordinates(false);
     show = true;
@@ -280,15 +280,15 @@ void FileKey::logic(float dt) {
             }
 
             //set position
-
-            float key_y = 20.0f;
+            float offset_y = gGourceSettings.font_size + 6.0f;
+            float key_y = offset_y;
 
             for(std::vector<FileKeyEntry*>::iterator it = active_keys.begin(); it != active_keys.end(); it++) {
                 FileKeyEntry* entry = *it;
                 if(entry->getCount()>0) {
                     entry->setDestY(key_y);
                 }
-                key_y += 20.0f;
+                key_y += offset_y;
             }
 
             //remove and delete finished entries
