@@ -1,5 +1,6 @@
 0.52:
  * Fixed filenames not being affected by --font-scale (Carl Colena).
+ * Fixed file key not being affected by --font-scale.
 
 0.51:
  * Fixed --font-file relative path handling.
